2020-01-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-templates-intro): rewrote the whole intro.
	(find-refining-intro): new section: "5. Pointing to anchors".

2020-01-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-idris): new function.

	* eev-audiovideo.el: rewrote many comments.

	* eev-intro.el (find-audiovideo-intro): new section: "4.4. The
	default audio/video file".

	* eev-blinks.el (ee-find-man-pos-spec-list): `defvar'ed. Was
	undeclared before.

2020-01-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-git-links): use "export PAGER=cat".

2019-11-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-quick-intro): rewrote the section 7.2 to
	explain how beginners should use `M-j' without a prefix argument.

2019-11-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-org-intro): use \":results output\" (thx Ken
	Mankoff)

2019-11-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-org-intro): rewrote everything.
	(find-eev-intro): added `find-org-intro' to the index.

2019-10-31  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-mode.el (eev-mode-help): small changes.

2019-10-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-brxxx.el (brwget): new function.

2019-10-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-esubstitutecommandkeys): new function.
	(ee-find-eejumps-header): small changes.

	* eev-mode.el (eev-mode-help): small changes.

2019-10-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-audiovideo-intro): new section: "4.3. A
	demo".

2019-10-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-find-efunction-links): added two links that
	refer to `load-history'.

	* eev-intro.el (find-brxxx-intro): small changes.

2019-10-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-brxxx-intro): added several new sections.

	* eev-pdflike.el (brpdfl, brpdfd): new functions.
